--- a/Maui/SimpleWeather.Maui/Main/LocationsPage.xaml
+++ b/Maui/SimpleWeather.Maui/Main/LocationsPage.xaml
@@ -8,6 +8,7 @@
     xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
     xmlns:local="clr-namespace:SimpleWeather.Maui.Main"
     xmlns:localControls="clr-namespace:SimpleWeather.Maui.Controls"
+    xmlns:main="clr-namespace:SimpleWeather.Maui.Main"
     xmlns:matIcons="clr-namespace:SimpleWeather.Maui.MaterialIcons"
     xmlns:res_strings="clr-namespace:SimpleWeather.Resources.Strings;assembly=SimpleWeather.Shared"
     xmlns:sharedViewModels="clr-namespace:SimpleWeather.NET.ViewModels"
@@ -16,7 +17,7 @@
     x:Name="LocPage"
     Title="{x:Static res_strings:Resources.label_nav_locations}"
     x:DataType="sharedViewModels:LocationsViewModel"
-    Shell.NavBarIsVisible="True">
+    main:AppShell.AppBarIsVisible="True">
 
     <ContentPage.Resources>
         <converters:LocationTypeConverter x:Key="locTypeConverter" />
