--- a/Maui/SimpleWeather.Maui/Main/WeatherAQIPage.xaml
+++ b/Maui/SimpleWeather.Maui/Main/WeatherAQIPage.xaml
@@ -12,7 +12,7 @@
     xmlns:converters="clr-namespace:SimpleWeather.Maui.Converters"
     xmlns:viewModels="clr-namespace:SimpleWeather.Maui.ViewModels"
     Title="{x:Static res_strings:Resources.label_airquality}"
-    Shell.NavBarIsVisible="True"
+    local:AppShell.AppBarIsVisible="True"
     x:Name="AQIPage">
 
     <ContentPage.Resources>
