--- a/Maui/SimpleWeather.Maui/Main/WeatherDetailsPage.xaml
+++ b/Maui/SimpleWeather.Maui/Main/WeatherDetailsPage.xaml
@@ -4,12 +4,13 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:res_strings="clr-namespace:SimpleWeather.Resources.Strings;assembly=SimpleWeather.Shared"
+    xmlns:local="clr-namespace:SimpleWeather.Maui.Main"
     xmlns:localControls="clr-namespace:SimpleWeather.Maui.Controls"
     xmlns:controls="clr-namespace:SimpleWeather.Common.Controls;assembly=SimpleWeather.Common"
     xmlns:converters="clr-namespace:SimpleWeather.Maui.Converters"
     xmlns:viewModels="clr-namespace:SimpleWeather.Maui.ViewModels"
     Title="{x:Static res_strings:Resources.label_forecast}"
-    Shell.NavBarIsVisible="True"
+    local:AppShell.AppBarIsVisible="True"
     x:Name="DetailsPage">
 
     <ContentPage.Resources>
