--- a/Maui/SimpleWeather.Maui/Preferences/PreferenceListDialogPage.xaml
+++ b/Maui/SimpleWeather.Maui/Preferences/PreferenceListDialogPage.xaml
@@ -4,12 +4,13 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:SimpleWeather.Maui.Preferences"
+    xmlns:main="clr-namespace:SimpleWeather.Maui.Main"
     xmlns:matIcons="clr-namespace:SimpleWeather.Maui.MaterialIcons"
     Title="{Binding Text}"
     x:DataType="local:ListViewCell"
     BackgroundColor="{AppThemeBinding Light={StaticResource LightSurface},
                                       Dark={StaticResource DarkSurface}}"
-    Shell.NavBarIsVisible="True">
+    main:AppShell.AppBarIsVisible="True">
 
     <Frame BackgroundColor="Transparent" BorderColor="Transparent">
         <ListView
