--- a/Maui/SimpleWeather.Maui/Preferences/Settings_Icons.xaml
+++ b/Maui/SimpleWeather.Maui/Preferences/Settings_Icons.xaml
@@ -4,13 +4,14 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:controls="clr-namespace:SimpleWeather.Maui.Controls"
+    xmlns:main="clr-namespace:SimpleWeather.Maui.Main"
     xmlns:matIcons="clr-namespace:SimpleWeather.Maui.MaterialIcons"
     xmlns:res_strings="clr-namespace:SimpleWeather.Resources.Strings;assembly=SimpleWeather.Shared"
     xmlns:utils="clr-namespace:SimpleWeather.Utils;assembly=SimpleWeather.Shared"
     Title="{x:Static res_strings:Resources.pref_title_icons}"
     BackgroundColor="{AppThemeBinding Light={DynamicResource WhiteBrush},
                                       Dark={StaticResource BlackBrush}}"
-    Shell.NavBarIsVisible="True">
+    main:AppShell.AppBarIsVisible="True">
 
     <Grid>
         <ScrollView Orientation="Vertical" Padding="16,0" HorizontalScrollBarVisibility="Never">
