WeatherNow: update margins and layout

--- a/Maui/SimpleWeather.Maui/Main/WeatherNow.xaml
+++ b/Maui/SimpleWeather.Maui/Main/WeatherNow.xaml
@@ -45,6 +45,7 @@
                         IsVisible="{x:Bind WNowViewModel.Weather.Location ne null, Mode=OneWay}">
                 <Grid x:Name="ListLayout"
                       HorizontalOptions="Center"
+                      VerticalOptions="Center"
                       RowDefinitions="Auto, Auto"
                       SizeChanged="ListLayout_SizeChanged" />
             </ScrollView>
