--- a/Maui/SimpleWeather.Maui/Controls/MoonPhaseControl.xaml
+++ b/Maui/SimpleWeather.Maui/Controls/MoonPhaseControl.xaml
@@ -10,7 +10,7 @@
              xmlns:res_strings="clr-namespace:SimpleWeather.Resources.Strings;assembly=SimpleWeather.Shared"
              xmlns:wicons="clr-namespace:SimpleWeather.Icons;assembly=SimpleWeather.Shared"
              x:DataType="commonControls:MoonPhaseViewModel"
-             MinimumWidthRequest="420">
+             MinimumWidthRequest="{OnIdiom Default=450, Phone=340}">
     <ContentView.Resources>
         <Style x:Key="DisabledMoonStyle" TargetType="controls:IconControl">
             <Setter Property="Opacity" Value="0.5" />
@@ -37,14 +37,12 @@
             x:Name="MoonStack"
             Padding="{OnIdiom Default='15,0', Phone='4,0'}"
             HorizontalOptions="Center"
-            Wrap="NoWrap" AlignContent="Center" JustifyContent="Center" AlignItems="Center">
+            Wrap="Wrap" AlignContent="Center" JustifyContent="Center" AlignItems="Center">
             <!--  New Moon  -->
             <controls:IconControl
                 x:Name="NewMoonIcon"
-                MaximumHeightRequest="48"
-                MaximumWidthRequest="48"
-                MinimumHeightRequest="36"
-                MinimumWidthRequest="36"
+                HeightRequest="36"
+                WidthRequest="36"
                 IconWidth="{Binding Source={RelativeSource Mode=Self}, Path=Width}"
                 IconHeight="{Binding Source={RelativeSource Mode=Self}, Path=Height}"
                 Style="{DynamicResource DisabledMoonStyle}"
@@ -52,10 +50,8 @@
             <!--  Waxing Crescent  -->
             <controls:IconControl
                 x:Name="WaxCresIcon"
-                MaximumHeightRequest="48"
-                MaximumWidthRequest="48"
-                MinimumHeightRequest="36"
-                MinimumWidthRequest="36"
+                HeightRequest="36"
+                WidthRequest="36"
                 IconWidth="{Binding Source={RelativeSource Mode=Self}, Path=Width}"
                 IconHeight="{Binding Source={RelativeSource Mode=Self}, Path=Height}"
                 Style="{DynamicResource DisabledMoonStyle}"
@@ -63,10 +59,8 @@
             <!--  First Qtr  -->
             <controls:IconControl
                 x:Name="FirstQtrIcon"
-                MaximumHeightRequest="48"
-                MaximumWidthRequest="48"
-                MinimumHeightRequest="36"
-                MinimumWidthRequest="36"
+                HeightRequest="36"
+                WidthRequest="36"
                 IconWidth="{Binding Source={RelativeSource Mode=Self}, Path=Width}"
                 IconHeight="{Binding Source={RelativeSource Mode=Self}, Path=Height}"
                 Style="{DynamicResource DisabledMoonStyle}"
@@ -74,10 +68,8 @@
             <!--  Waxing Gibbous  -->
             <controls:IconControl
                 x:Name="WaxGibbousIcon"
-                MaximumHeightRequest="48"
-                MaximumWidthRequest="48"
-                MinimumHeightRequest="36"
-                MinimumWidthRequest="36"
+                HeightRequest="36"
+                WidthRequest="36"
                 IconWidth="{Binding Source={RelativeSource Mode=Self}, Path=Width}"
                 IconHeight="{Binding Source={RelativeSource Mode=Self}, Path=Height}"
                 Style="{DynamicResource DisabledMoonStyle}"
@@ -85,10 +77,8 @@
             <!--  Full Moon  -->
             <controls:IconControl
                 x:Name="FullMoonIcon"
-                MaximumHeightRequest="48"
-                MaximumWidthRequest="48"
-                MinimumHeightRequest="36"
-                MinimumWidthRequest="36"
+                HeightRequest="36"
+                WidthRequest="36"
                 IconWidth="{Binding Source={RelativeSource Mode=Self}, Path=Width}"
                 IconHeight="{Binding Source={RelativeSource Mode=Self}, Path=Height}"
                 Style="{DynamicResource DisabledMoonStyle}"
@@ -96,10 +86,8 @@
             <!--  Waning Gibbous  -->
             <controls:IconControl
                 x:Name="WanGibbousIcon"
-                MaximumHeightRequest="48"
-                MaximumWidthRequest="48"
-                MinimumHeightRequest="36"
-                MinimumWidthRequest="36"
+                HeightRequest="36"
+                WidthRequest="36"
                 IconWidth="{Binding Source={RelativeSource Mode=Self}, Path=Width}"
                 IconHeight="{Binding Source={RelativeSource Mode=Self}, Path=Height}"
                 Style="{DynamicResource DisabledMoonStyle}"
@@ -107,10 +95,8 @@
             <!--  Third Qtr  -->
             <controls:IconControl
                 x:Name="ThirdQtrIcon"
-                MaximumHeightRequest="48"
-                MaximumWidthRequest="48"
-                MinimumHeightRequest="36"
-                MinimumWidthRequest="36"
+                HeightRequest="36"
+                WidthRequest="36"
                 IconWidth="{Binding Source={RelativeSource Mode=Self}, Path=Width}"
                 IconHeight="{Binding Source={RelativeSource Mode=Self}, Path=Height}"
                 Style="{DynamicResource DisabledMoonStyle}"
@@ -118,10 +104,8 @@
             <!--  Waning Crescent  -->
             <controls:IconControl
                 x:Name="WanCrescentIcon"
-                MaximumHeightRequest="48"
-                MaximumWidthRequest="48"
-                MinimumHeightRequest="36"
-                MinimumWidthRequest="36"
+                HeightRequest="36"
+                WidthRequest="36"
                 IconWidth="{Binding Source={RelativeSource Mode=Self}, Path=Width}"
                 IconHeight="{Binding Source={RelativeSource Mode=Self}, Path=Height}"
                 Style="{DynamicResource DisabledMoonStyle}"
