--- a/Maui/SimpleWeather.Maui/Controls/AQIForecastControl.xaml
+++ b/Maui/SimpleWeather.Maui/Controls/AQIForecastControl.xaml
@@ -72,7 +72,7 @@
             Margin="12,0"
             BackgroundColor="{AppThemeBinding Light='#B3616161', Dark='#8AF1F1F1'}"
             ProgressColor="{Binding ProgressColor}"
-            Progress="{x:Bind Progress / 100}" />
+            Progress="{x:Bind Progress * 0.01}" />
         <FlexLayout
             HorizontalOptions="Center"
             VerticalOptions="Start"
