--- a/Maui/SimpleWeather.Maui/Controls/UVControl.xaml
+++ b/Maui/SimpleWeather.Maui/Controls/UVControl.xaml
@@ -43,7 +43,7 @@
             Margin="12,0,12,12"
             BackgroundColor="{AppThemeBinding Light='#B3616161', Dark='#8AF1F1F1'}"
             ProgressColor="{Binding ProgressColor}"
-            Progress="{x:Bind Progress / 100}" />
+            Progress="{x:Bind Progress * 0.01}" />
     </Grid>
 </ContentView>
 
