--- a/Maui/SimpleWeather.Maui/Controls/LocationPanel.xaml
+++ b/Maui/SimpleWeather.Maui/Controls/LocationPanel.xaml
@@ -114,7 +114,7 @@
             <Grid HorizontalOptions="End" IsVisible="{x:Bind IsShowHiLo and IsWeatherValid, TargetNullValue=false, FallbackValue=false, Mode=OneWay}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
-                    <ColumnDefinition />
+                    <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
                 <Label
                     x:Name="HiTemp"
@@ -137,7 +137,7 @@
             <Grid HorizontalOptions="End" IsVisible="{x:Bind IsShowHiLo and IsWeatherValid, TargetNullValue=false, FallbackValue=false, Mode=OneWay}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
-                    <ColumnDefinition />
+                    <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
                 <Label
                     x:Name="LoTemp"
