IconControl: use SKSharp for svg rendering
* Set dimensions for control

--- a/SimpleWeather.Windows/Controls/BeaufortControl.xaml
+++ b/SimpleWeather.Windows/Controls/BeaufortControl.xaml
@@ -26,6 +26,7 @@
                 <local:IconControl
                     x:Name="BeaufortIcon"
                     Width="55"
+                    Height="55"
                     Margin="20,10"
                     VerticalAlignment="Center"
                     Foreground="{ThemeResource BeaufortPaintColorBrush}"
