--- a/SimpleWeather.Windows/Controls/DetailItem.xaml
+++ b/SimpleWeather.Windows/Controls/DetailItem.xaml
@@ -53,6 +53,8 @@
             <localControls:IconControl
                 x:Name="IconCtrl"
                 Grid.Row="1"
+                Width="60"
+                Height="60"
                 Margin="7.5"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center"
