--- a/SimpleWeather.Windows/Controls/HourlyForecastItem.xaml
+++ b/SimpleWeather.Windows/Controls/HourlyForecastItem.xaml
@@ -68,6 +68,7 @@
             Text="{Binding ShortDate, Mode=OneWay}" />
         <Border Style="{ThemeResource Divider}" Visibility="Collapsed" />
         <local:IconControl
+            Width="50"
             Height="50"
             Margin="5"
             HorizontalAlignment="Center"
